# leet-code

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.gemini/commands/: create_performance_check.toml  create_test.toml  init_problem.toml  translate_description.toml
problems/: .gitignore
problems/0001_two_sum/: description.md  main.py  test_0001.py  test_main.py
problems/0006_Zigzag_Conversion/: test_0006.py
problems/0009_palindrome_number/: description_jp.md  main.py  test_0009.py
problems/0011_Container_With_Most_Water/: main.py  test_0011.py
problems/0013_Roman_to_Integer/: description.md  main.py  test_0013.py
problems/problem_0001_two_sum/: main.py  performance_check.py  test_0001.py
problems/problem_0006_Zigzag_Conversion/: description.md  description_jp.md  main.py  test_0006.py
problems/problem_0009_palindrome_number/: description.md  performance_check.py  test_0009.py
problems/problem_0011_Container_With_Most_Water/: description.md  description_jp.md  performance_check.py  test_0011.py
problems/problem_0013_Roman_to_Integer/: description_jp.md  performance_check.py  test_0013.py
problems/problem_0021_Merge_Two_Sorted_Lists/: description.md  description_jp.md  main.py  test_0021.py
