[project]
name = "leet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
